# ollama-chroma-rag

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  vector.py
